--- a/assets/css/scss/layout/_banner.scss
+++ b/assets/css/scss/layout/_banner.scss
@@ -124,3 +124,7 @@
 }
 
 @include banner-colours ();
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	.breadcrumbs-container .breadcrumbs-yoast {margin-top:0;}
+}
